# gensp

./: .gitattribute  .gitattributes  GenSP.hs  README.md  answers.txt  gensp.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
templates/sublime-cmake/{-!app-name!-}/: CMakeLists.txt  README  {-!App-name!-}Config.h.in  {-!app-name!-}.sublime-project  {-!app-name!-}.sublime-workspace
templates/sublime-cmake/{-!app-name!-}/src/: testgtest.cpp  {-!app-name!-}.c  {-!app-name!-}_lib.c
templates/sublime-haskell/{-!app-name!-}/: {-!App-name!-}.hs  {-!app-name!-}.cabal  {-!app-name!-}.sublime-project
